main/default/objects/OLI__c/fields/AccessTechName__c.field-meta.xml
<CustomField>
    <fullName>AccessTechName__c</fullName>
    <description>AccessTech Name for OLI</description>
    <label>AccessTechName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>