main/default/objects/OLI__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>if( OpportunityLocationConfiguration__r.Active__c , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>