main/default/objects/OLI__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>quote needs to be green or approved to print a quote</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Sales Management Approval Required</fullName>
            </value>
            <value>
                <fullName>Offer Management Approval Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>