main/default/objects/OLI__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value to be used for validation of approval</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>