main/default/objects/OLI__c/fields/Config_Parent__c.field-meta.xml
<CustomField>
    <fullName>Config_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used on the configuration page only.</description>
    <inlineHelpText>used on the configuration page only</inlineHelpText>
    <label>Config Parent</label>
    <referenceTo>OLI__c</referenceTo>
    <relationshipLabel>Opportunity Line Items (Config Parent)</relationshipLabel>
    <relationshipName>Config_Children</relationshipName>
    <type>Lookup</type>
</CustomField>