main/default/objects/OLI__c/fields/DQ__c.field-meta.xml
<CustomField>
    <fullName>DQ__c</fullName>
    <description>System field.  Do not use in page layouts.</description>
    <label>DQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>