main/default/objects/OLI__c/fields/DQ_FR__c.field-meta.xml
<CustomField>
    <fullName>DQ_FR__c</fullName>
    <label>DQ_FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>