main/default/objects/OLI__c/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MRC</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>