main/default/objects/OLI__c/fields/MRC_Floor__c.field-meta.xml
<CustomField>
    <fullName>MRC_Floor__c</fullName>
    <description>The lowest amount allowed for MRC (Monthly Recurring Charge) on this product, at the time of its creation.</description>
    <inlineHelpText>The lowest amount allowed for MRC (Monthly Recurring Charge) on this product, at the time of its creation.</inlineHelpText>
    <label>MRC Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>