main/default/objects/OLI__c/fields/MRC_Floor_Total__c.field-meta.xml
<CustomField>
    <fullName>MRC_Floor_Total__c</fullName>
    <formula>Qty__c * (MRC_Floor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRC Floor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>