main/default/objects/OLI__c/fields/MRCList__c.field-meta.xml
<CustomField>
    <fullName>MRCList__c</fullName>
    <label>MRCList</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>