main/default/objects/OLI__c/fields/NAA_Total__c.field-meta.xml
<CustomField>
    <fullName>NAA_Total__c</fullName>
    <formula>IF( isnull(PP_NAA_Percent__c ), 0,   Qty__c  *MRC__c *  PP_NAA_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAA Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>