main/default/objects/OLI__c/fields/NRC__c.field-meta.xml
<CustomField>
    <fullName>NRC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NRC</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>