main/default/objects/OLI__c/fields/NRC_Floor__c.field-meta.xml
<CustomField>
    <fullName>NRC_Floor__c</fullName>
    <description>The lowest amount allowed for NRC (Non-Recurring Charge) on this product, at the time of this creation</description>
    <label>NRC_Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>