main/default/objects/OLI__c/fields/NRC_Total__c.field-meta.xml
<CustomField>
    <fullName>NRC_Total__c</fullName>
    <formula>Qty__c  * (NRC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NRC Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>