main/default/objects/OLI__c/fields/NRCList__c.field-meta.xml
<CustomField>
    <fullName>NRCList__c</fullName>
    <label>NRCList</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>