main/default/objects/OLI__c/fields/Off_Footprint__c.field-meta.xml
<CustomField>
    <fullName>Off_Footprint__c</fullName>
    <formula>(( 
CONTAINS(PP_Feature_Group__c , &#39;Access/Bandwidth&#39;) 
&amp;&amp; 
CONTAINS( PP_Sales_Rate_Plan_Description__c , &#39;Extended&#39;) 
) 
|| 
( 
CONTAINS(PP_Feature_Group__c , &#39;Access/Bandwidth&#39;) 
&amp;&amp; 
CONTAINS( PP_Sales_Rate_Plan_Description__c , &#39;EoTDM&#39;) 
&amp;&amp; 
NOT(OpportunityLocationConfiguration__r.Opportunity_Location__r.Service_Location__r.Location__r.Building__r.Serving_LSO__r.In_Market__c ) 
)) 
&amp;&amp; 
( 
TEXT( OpportunityLocationConfiguration__r.Opportunity_Location__r.Opportunity__r.Account.Type) == &#39;Prospect&#39; 
||
TEXT( OpportunityLocationConfiguration__r.Opportunity_Location__r.Opportunity__r.Account.Type) == &#39;Former Customer&#39; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Off Footprint</label>
    <type>Checkbox</type>
</CustomField>