main/default/objects/OLI__c/fields/Off_Footprint_Approved__c.field-meta.xml
<CustomField>
    <fullName>Off_Footprint_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Off Footprint Approved</label>
    <type>Checkbox</type>
</CustomField>