main/default/objects/OLI__c/fields/Parent_Opportunity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Opportunity Line Item</label>
    <referenceTo>OLI__c</referenceTo>
    <relationshipLabel>Dependent Line Items</relationshipLabel>
    <relationshipName>Opportunity_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>