main/default/objects/OLI__c/fields/ParentName__c.field-meta.xml
<CustomField>
    <fullName>ParentName__c</fullName>
    <label>ParentName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>