main/default/objects/OLI__c/fields/PP_LD_Intrastate__c.field-meta.xml
<CustomField>
    <fullName>PP_LD_Intrastate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PP_LD_Intrastate</label>
    <type>Checkbox</type>
</CustomField>