main/default/objects/OLI__c/fields/PP_Package_Feature__c.field-meta.xml
<CustomField>
    <fullName>PP_Package_Feature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PP_Package_Feature</label>
    <type>Checkbox</type>
</CustomField>