main/default/objects/OLI__c/fields/PP_Per_Account__c.field-meta.xml
<CustomField>
    <fullName>PP_Per_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PP_Per_Account</label>
    <type>Checkbox</type>
</CustomField>