main/default/objects/OLI__c/fields/PP_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>PP_Product_Family__c</fullName>
    <label>PP_Product_Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>