main/default/objects/OLI__c/fields/PP_Product_Grouping__c.field-meta.xml
<CustomField>
    <fullName>PP_Product_Grouping__c</fullName>
    <label>PP_Product_Grouping</label>
    <length>80</length>
    <type>Text</type>
</CustomField>