main/default/objects/OLI__c/fields/PP_Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>PP_Sales_Product__c</fullName>
    <label>PP_Sales_Product</label>
    <length>80</length>
    <type>Text</type>
</CustomField>