main/default/objects/OLI__c/fields/PP_Sales_Rate_Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>PP_Sales_Rate_Plan_Description__c</fullName>
    <label>PP_Sales_Rate_Plan_Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>