main/default/objects/OLI__c/fields/PP_SalesProductExternalID__c.field-meta.xml
<CustomField>
    <fullName>PP_SalesProductExternalID__c</fullName>
    <label>PP_ SalesProductExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>