main/default/objects/OLI__c/fields/PP_SalesRatePlanPricingExternalID__c.field-meta.xml
<CustomField>
    <fullName>PP_SalesRatePlanPricingExternalID__c</fullName>
    <label>PP_SalesRatePlanPricingExternalID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>