main/default/objects/OLI__c/fields/PP_Voice_Line__c.field-meta.xml
<CustomField>
    <fullName>PP_Voice_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PP_Voice_Line</label>
    <type>Checkbox</type>
</CustomField>