main/default/objects/OLI__c/fields/Product_Pricing_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Pricing_Display_Name__c</fullName>
    <description>System field for displaying PP_Product_Pricing_Name__c on PDFs</description>
    <label>Product Pricing Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>