main/default/objects/OLI__c/fields/SPC_Component__c.field-meta.xml
<CustomField>
    <fullName>SPC_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPC Component</label>
    <referenceTo>SPC_Component__c</referenceTo>
    <relationshipLabel>Opportunity Line Items</relationshipLabel>
    <relationshipName>Opportunity_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>