main/default/objects/OLI__c/fields/SPC_MaxQty__c.field-meta.xml
<CustomField>
    <fullName>SPC_MaxQty__c</fullName>
    <label>SPC_MaxQty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>