main/default/objects/OLI__c/fields/SPC_MRC_OnNet__c.field-meta.xml
<CustomField>
    <fullName>SPC_MRC_OnNet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPC_MRC_OnNet</label>
    <type>Checkbox</type>
</CustomField>