main/default/objects/OLI__c/fields/SPC_Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>SPC_Sales_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPC Sales Product</label>
    <referenceTo>SPC_Product__c</referenceTo>
    <relationshipLabel>Opportunity Line Items</relationshipLabel>
    <relationshipName>Opportunity_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>