main/default/objects/OLI__c/fields/SPC_Sales_Product_Component_Id__c.field-meta.xml
<CustomField>
    <fullName>SPC_Sales_Product_Component_Id__c</fullName>
    <label>SPC_Sales_Product_Component_Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>