main/default/objects/OLI__c/fields/SPC_Sales_Selection_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>SPC_Sales_Selection_Rule_Name__c</fullName>
    <label>SPC_Sales_Selection_Rule_Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>