main/default/objects/OLI__c/fields/Strategic_Product_Segment__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Product_Segment__c</fullName>
    <formula>SPC_Sales_Product__r.Strategic_Product_Segment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategic Product Segment</label>
    <type>Text</type>
</CustomField>