main/default/objects/OLI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_Name__c</columns>
    <columns>Qty__c</columns>
    <columns>MRC__c</columns>
    <columns>MRC_Discount__c</columns>
    <columns>MRC_Total__c</columns>
    <columns>NRC__c</columns>
    <columns>NRC_Discount__c</columns>
    <columns>NRC_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>