main/default/objects/OLI__c/listViews/CLink_Solutions.listView-meta.xml
<ListView>
    <fullName>CLink_Solutions</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>PP_Product_Pricing_Name__c</columns>
    <columns>OpportunityLocationConfiguration__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PP_Product_Pricing_Name__c</field>
        <operation>contains</operation>
        <value>clink</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CLink Solutions</label>
</ListView>