main/default/objects/OLI__c/listViews/CPQ_Templates.listView-meta.xml
<ListView>
    <fullName>CPQ_Templates</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Tag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Name__c</field>
        <operation>contains</operation>
        <value>cpq template</value>
    </filters>
    <label>CPQ Templates</label>
    <sharedTo>
        <group>Sales_Enablement</group>
    </sharedTo>
</ListView>